Added sound effects

--- a/MinMin/SFX_%l.ini
+++ b/MinMin/SFX_%l.ini
@@ -1,32 +1,426 @@
 [placeholder]
+[sfx_0011_lassothrow]
+[sfx_0015_boomerang]
+[sfx_0017_boomerang]
+[sfx_0019_b'rangdeflect]
+[sfx_0021_b'rangcatch]
+[sfx_0032_flamerangignite]
 [sfx_0037_postwobble]
+[sfx_0059_bilbycage01]
+[sfx_0060_cratesmash]
+[sfx_0061_cratesmash]
+[sfx_0086_tyeatpie]
+[sfx_0091_lp_tension]
+loop=1
+[sfx_0092_tensionsnap]
+[sfx_0095_smwoodimpct]
+[sfx_0099_fencehit]
 [sfx_0101_tyjump]
 [sfx_0106_tystopsshort]
+[sfx_0117_minisplash]
+[sfx_0131_tyland_dirt]
+[sfx_0148_tystep_water]
+[sfx_0149_tystep_water]
 [sfx_0157_tyknockdown]
 [sfx_0162_tystep_metal]
+[sfx_0249_jeepignition]
+[sfx_0251_lp_jeepidle]
+loop=1
+[sfx_0253_lp_jeep1stgear]
+loop=1
+[sfx_0254_gearchange]
+[sfx_0255_lp_jeep3rdgear]
+loop=1
+[sfx_0256_jeepthrottle]
 [sfx_0260_gravelskid]
+[sfx_0271_watertanksmash]
+[sfx_0278_streetsign]
+[sfx_0279_housecollapse]
+[sfx_0280_woodcollapse]
+[sfx_0281_woodcrash]
+[sfx_0282_metalcrash]
+[sfx_0284_metaltowerfall]
+[sfx_0285_bullsplash]
+[sfx_0286_bulljump]
+[sfx_0289_shedsmash]
+[sfx_0290_bulland]
+[sfx_0291_bullcharge]
+[sfx_0292_lp_bullwater]
+loop=1
 [sfx_0322_enemyfallmed]
+[sfx_0324_enemydies]
+[sfx_0331_throw]
+[sfx_0367_lp_killbike]
+loop=1
 [sfx_0368_killbikerev]
 [sfx_0369_killbikedefeated]
 [sfx_0370_killbikepass]
 [sfx_0386_lizardhiss]
 [sfx_0389_punch]
+[sfx_0392_canhit]
 [sfx_0396_enemystep_soft]
 [sfx_0406_rbacksnort]
+[sfx_0407_b3rbacksnort]
 [sfx_0407_rbacksnort]
+[sfx_0408_lp_rbackrunb3]
+loop=1
 [sfx_0409_rbackfall]
 [sfx_0410_rbackcrash]
 [sfx_0413_rbacktrotl]
 [sfx_0414_rbacktrotr]
+[sfx_0416_rbackroarb3]
 [sfx_0420_rback4legs]
+[sfx_0500_opalx]
+[sfx_0501_opalx]
+[sfx_0502_opalx]
+[sfx_0503_opalx]
 [sfx_0522_allopals]
+[sfx_0523_lp_opalcollect]
+loop=1
+[sfx_0525_bigbutton]
+[sfx_0527_b3claim]
+[sfx_0528_b3checkpoint]
 [sfx_0530_cp_appears]
+[sfx_0531_objectivea1]
 [sfx_0541_typortal]
+[sfx_0555_bilbyclue]
 [sfx_0570_startergun]
 [sfx_0571_buzzer]
+[sfx_0572_collecttegg]
+[sfx_0573_collectcog]
+[sfx_0574_bilbyrescue]
+[sfx_0582_emucaught]
+[sfx_0583_emuseen]
+[sfx_0645_crow]
+[sfx_0670_lp_crows]
+loop=1
+[sfx_0713_lp_emurunning]
+loop=1
 [sfx_0720_lp_mauriewings]
+loop=1
+[sfx_0742_friendstepsoft]
+[sfx_0817_lp_cows]
+loop=1
+[sfx_0818_lp_sheep]
 loop=1
 [sfx_0855_lp_uwaterambience]
 loop=1
+[TY_WaterfallClose_LP]
+loop=1
+[TY_WaterfallDistant_LP]
+loop=1
+[sfx_0863_lp_bushfire]
+loop=1
+[sfx_0932_lp_pipeflow]
+loop=1
+[sfx_0963_toxicpipe]
+[sfx_0964_piperepair]
+[sfx_0965_piperepair]
+[sfx_0999_lp_shimmering]
+loop=1
+[sfx_1009_frillshriek]
+[sfx_csfx_bullbreath]
+[silencio]
+[sfx_0093_ranghit]
 [sfx_1011_frillouch]
 [sfx_1012_frillouch]
+[HD_flamerang_throw_01]
+[HD_flamerang_throw_02]
+[HD_flamerang_throw_03]
+[HD_zappyrang_throw_01]
+[HD_zappyrang_throw_02]
+[HD_zappyrang_throw_03]
+[HD_Ty_glide_lp]
+loop=1
+[HD_frostyrang_throw1]
+[HD_frostyrang_throw2]
+[HD_frostyrang_throw3]
+[HD_kaboomerang_throw1]
+[HD_kaboomerang_throw2]
+[HD_kaboomerang_throw3]
+[HD_multirang_throw1]
+[HD_multirang_throw2]
+[HD_multirang_throw3]
+[HD_crate_01]
+[HD_crate_02]
+[HD_crate_03]
+[HD_crate_04]
+[HD_crate_05]
+[HD_crate_06]
+[HD_grab_dirt_gravel]
+[HD_grab_metal]
+[HD_grab_sand_snow]
+[HD_grab_stone_rock]
+[sfx_ty_burn]
+[TyDirtStep1]
+[TyDirtStep2]
+[TyDirtStep3]
+[TyDirtStep4]
+[TyDirtStep5]
+[TyDirtStep6]
+[TyDirtLand]
+[TyDirtLand2]
+[Tygrassstep1]
+[Tygrassstep2]
+[Tygrassstep3]
+[Tygrassstep4]
+[TygrassLand]
+[TyHardLand1]
+[TyHardSlide]
+[TyHardStep1]
+[TyHardStep2]
+[TyHardStep3]
+[TyHardStep4]
+[TyHardStep5]
+[TyHardStep6]
+[TyLandMet]
+[TyStepMet1]
+[TyStepMet2]
+[TyStepMet3]
+[TyStepWood1]
+[TyStepWood2]
+[TyStepWood3]
+[TyStepWood4]
+[TyLandWood]
+[TyLeavesLand]
+[TyLeavesStep1]
+[TyLeavesStep2]
+[TyLeavesStep3]
+[TyLeavesStep4]
+[TyWetStep01]
+[TyWetStep02]
+[TyWetStep03]
+[TyWetStep04]
+[TySplash1B]
+[TySplash2B]
+[TySplash3B]
+[TySplash4B]
+[Tykart_rockhit01]
+[Tykart_rockhit02]
+[Tykart_rockhit03]
+[Tykart_methit01]
+[Tykart_methit02]
+[Tykart_methit03]
+[Tykart_hit06]
+[Tykart_hit07]
+[Tykart_hit08]
+[Tykart_bailhit04]
+[Tykart_bailhit03]
+[TyPunchedM1]
+[TyPunchedM2]
+[TyPunchedM3]
+[TyFriendStepSoft1]
+[TyFriendStepSoft2]
+[TyFriendStepSoft3]
+[FriendStepBare01]
+[FriendStepBare02]
+[FriendStepBare03]
+[TYFriendStepB_01]
+[TYFriendStepB_02]
+[Ty_TreeSmash1]
+[Ty_TreeSmash2]
+[Ty_TreeSmash3]
+[TY_Hydraulic1LP]
+[TY_Hydraulic2LP]
+[T2_aquathrow1]
+[T2_aquathrow2]
+[T2_aquathrow3]
+[T2_explosion1]
+[T2_explosion2]
+[T2_explosion3]
+[T2_explosion4]
+[EnemyStepMet1]
+[EnemyStepMet2]
+[EnemyStepMet3]
+[TYsp_birds_01_lp]
+loop=1
+[TYspBirdsLp1]
+loop=1
+[TYspBirdsLp2]
+loop=1
+[TYspKookas1]
+loop=1
+[TYspKookas3]
+loop=1
+[T2_Punch_C_01]
+[T2_Punch_C_02]
+[T2_Punch_C_03]
+[T2_Punch_C_04]
+[T2_Punch_B_01]
+[T2_Punch_B_02]
+[T2_Punch_B_03]
+[T2_Punch_B_04]
+[T2_rangcatch01]
+[T2_rangcatch02]
+[T2_rangcatch03]
+[T2_rangcatchC06]
+[T2_rangcatchC015]
+[T2_rangdeflect_01]
+[T2_rangdeflect_02]
+[T2_rangdeflect_03]
+[T2_rangdeflect_04]
+[T2_rangthrow_01]
+[T2_rangthrow_02]
+[T2_rangthrow_03]
+[T2_rangthrow_04]
+[T2_rangthrow_05]
+[T2_ricochet1]
+[T2_ricochet2]
+[T2_ricochet3]
+[T2_tyjumpA01]
+[T2_tyjumpA02]
+[T2_tyjumpA03]
+[T2_tyjumpA04]
+[T2Aquarangcatch1]
+[T2Aquarangcatch2]
+[T2_aquathrow1]
+[T2_aquathrow3]
+[T2_flamehits01]
+[T2_flamehits02]
+[T2_flamehits03]
+[T2_iceformB_1]
+[T2_iceformB_2]
+[T2_iceformB_3]
+[T2_icesmash01]
+[T2_icesmash02]
+[GenWhoosh1]
+[GenWhoosh2]
+[GenWhoosh3]
+[T2_rang_thunder_hit01]
+[T2_rang_thunder_hit02]
+[Ty_step_lge_dirt1]
+[Ty_step_lge_dirt2]
+[Ty_step_lge_dirt3]
+[Ty_step_lge_dirt4]
+[Ty_step_lge_hard1]
+[Ty_step_lge_hard2]
+[Ty_step_lge_hard3]
+[Ty_step_lge_hard4]
+[Ty_step_lge_wood1]
+[Ty_step_lge_wood2]
+[Ty_step_lge_wood3]
+[Ty_step_med_dirt1]
+[Ty_step_med_dirt2]
+[Ty_step_med_dirt3]
+[Ty_step_med_dirt4]
+[Ty_step_med_dirt5]
+[Ty_step_med_dirt6]
+[Ty_step_med_grass1]
+[Ty_step_med_grass2]
+[Ty_step_med_grass3]
+[Ty_step_med_grass4]
+[Ty_step_med_grass01]
+[Ty_step_med_grass02]
+[Ty_step_med_grass03]
+[Ty_step_med_grass04]
+[Ty_step_med_grass05]
+[Ty_step_med_hard01]
+[Ty_step_med_hard02]
+[Ty_step_med_hard04]
+[Ty_step_med_hard05]
+[Ty_step_med_hard06]
+[Ty_step_med_water1]
+[Ty_step_med_water2]
+[Ty_step_med_water3]
+[Ty_step_med_water4]
+[Ty_step_med_wood1]
+[Ty_step_med_wood2]
+[Ty_step_med_wood3]
+[Ty_step_med_wood4]
+[Ty_step_small_dirt_01]
+[Ty_step_small_dirt_02]
+[Ty_step_small_dirt_03]
+[Ty_step_small_dirt_04]
+[Ty_step_small_hard_01]
+[Ty_step_small_hard_02]
+[Ty_step_small_hard_03]
+[Ty_step_small_hard_04]
+[Tycavedrip1]
+[Tycavedrip2]
+[Tycavedrip3]
+[Tycavedrip4]
+[Tycavedrip5]
+[TyBubble01]
+[TyBubble02]
+[TyBubble03]
+[TyBubble04]
+[TyBubble05]
+[TyBubble06]
+[TyBubble07]
+[TyBubble08]
+[TyBubble09]
+[TyBubble10]
+[TyBubble11]
+[TyBubble12]
+[TyBubble13]
+[TyBubble14]
+[TyBigBubbles1]
+[TyBigBubbles2]
+[TyBigBubbles3]
+[TYR_RangDeflect01]
+[TYR_RangDeflect02]
+[TYR_RangDeflect03]
+[TYR_RangDeflect04]
+[TYR_RangDeflect05]
+[TYR_RangDeflect06]
+[TYR_RangDeflect07]
+[TYR_RangDeflect08]
+[TYR_RangDeflect09]
+[TYR_RangDeflect10]
+[TySwimMono2_lp]
+loop=1
+[TySwimMono1_lp]
+loop=1
+[TYAMB_BirdsCrows01LP]
+loop=1
+[GenWhoosh4]
+[TYAMB_Crowcaw1]
+[TYAMB_Crowcaw2]
+[TYAMB_Crowcaw3]
+[TY_BT_Alert1]
+[TY_BT_Alert2]
+[TY_BT_Alert3]
+[TY_BT_Death1]
+[TY_BT_Death2]
+[TY_BT_Death3]
+[TY_Frill_Death1]
+[TY_Frill_Death4]
+[TY_EnemyADeath1]
+[TY_EnemyADeath2]
+[TY_EnemyADeath3]
+[TY_EnemyADeath4]
+[TY_B3cows_lp]
+loop=1
+[TY_B3atmos_lp1]
+loop=1
+[TY_B3Shed1]
+[TY_B3Shed2]
+[TY_B3Shed3]
+[TY_B3cow1]
+[TY_B3cow2]
+[TY_B3cow3]
+[TY_B3House1]
+[TY_B3House2]
+[TY1_B3_tensionsnap]
+[TY1_B3_tensionLP]
+loop=1
+[TY1_B3_FenceHit2]
+[TY1_B3_FenceHit1]
+[TY1_B3_TwisterattackST]
+[sfx_0935_lp_twister]
+loop=1
+[TY1_wind_desert1_lp]
+loop=1
+[TY1_B3_lasoothrow1]
+[TY1_B3_lasoothrow2]
+[TY1_B3_lasoothrow3]
+[TYSP_CavernB3]
+loop=1
+[TYB_Swim1_lp]
+loop=1
+[TYB_Swim2_lp]
+loop=1
+[TYB_smallsplash3]
+[TYB_smallsplash1]
+[TYB_smallsplash2]
+[TYCSB3_02_Extra]
